--- a/index.css
+++ b/index.css
@@ -1,28 +1,93 @@
+/* nav bar */
 nav {
     display: flex;
+    
+    flex-flow: row nowrap;
     width: 100%;
     position: relative;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+
 }
 
-nav ul {
- list-style-type: none;
- margin: 0;
- padding: 0;
- width: 60px;
- align-items: center;
-}
+header ul {
+    list-style-type: none;
+    margin: 0;
+    width: 500px;
+    
+   }
 
-li a {
-    display: inline;
-}
+ .topNav li {
+   display: inline;
+   width: 500px;
+   justify-content: space-around;
+   padding: 15px;
+
+ }
 
 
 nav > a {
- width: 200px;
+ display: flex;
+ width: 20px;
+ padding: 20px;
  background-color: blue;
  color: white;
- position: absolute;
- right: 0;
+ justify-content: center;
+ font-size: medium;
 
 }
 
+
+/* Body */
+
+.wrapper {
+    display: flex;
+    justify-content: space-around;
+    padding: 25px;
+    margin: 10px;
+    
+
+}
+
+.wrapper > div {
+    width: 600px;
+
+}
+
+.flexLeft {
+    
+    background-color: brown;
+    
+
+}
+.flexRight {
+    
+    background-color: aqua;
+    border: 1px;
+    border-style: solid;
+    border-color: grey;
+    
+
+}
+.Testamony {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+ 
+/*  This will be the foot */
+ .BottomNav { 
+     display:flex;
+     justify-content: space-between;
+
+ }
+
+ .BottomNav ul { 
+   padding: 25px;
+   align-self: flex-end;
+
+ }
